--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 venv/
 flaskblog/__pycache__
 flaskblog/site.db
+flaskblog/main/__pycache__
+flaskblog/users/__pycache__
+flaskblog/posts/__pycache__
